--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-sheets-automation",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Automate Google Sheets from Node.js: add, update, and read rows with simple API. Supports service accounts, header mapping, and batch operations.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -34,17 +34,17 @@
     "url": "https://github.com/CaesarSage"
   },
   "license": "MIT",
-  "homepage": "https://github.com/CaesarSage/google-sheets-automation#readme",
+  "homepage": "https://github.com/Caesarsage/googlesheet-automation#readme",
   "bugs": {
-    "url": "https://github.com/CaesarSage/google-sheets-automation/issues"
+    "url": "https://github.com/Caesarsage/googlesheet-automation/issues"
   },
   "funding": {
     "type": "github",
-    "url": "https://github.com/sponsors/CaesarSage"
+    "url": "https://github.com/sponsors/Caesarsage"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CaesarSage/google-sheets-automation.git"
+    "url": "git+https://github.com/Caesarsage/googlesheet-automation.git"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
